Updated stats architecture.